<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".views.DonationActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sv_donation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".views.DonationActivity">
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/donation_header_card_view"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="16dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/donation_form_card_view">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/donation_charity_logo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_launcher"
                        android:layout_margin="16dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/charity_logo" />

                    <TextView
                        android:id="@+id/donation_charity_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/placeholder"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/donation_charity_logo"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/donation_form_card_view"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toBottomOf="@id/donation_header_card_view"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        android:layout_marginHorizontal="16dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_visa_curved_32px"
                            android:layout_marginRight="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/visa_logo" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_mastercard_curved_32px"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/master_card_logo" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_american_express_curved_32px"
                            android:layout_marginHorizontal="5dp"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/amex_logo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_gravity="center_vertical"
                            android:text="and more..."/>

                        <ProgressBar
                            android:id="@+id/pb_make_donation"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:visibility="gone"
                            android:layout_gravity="center_vertical" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_payment_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <com.devlab.tamboon.views.AmountEditText
                            android:id="@+id/et_donation_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/amount"
                            android:layout_margin="16dp"
                            android:inputType="numberDecimal"
                            style="@style/OmiseEditText"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                        <co.omise.android.ui.CreditCardEditText
                            android:id="@+id/et_card_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_card_number"
                            android:layout_marginHorizontal="16dp"
                            style="@style/OmiseEditText"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <co.omise.android.ui.ExpiryDateEditText
                                android:id="@+id/et_card_expiry_date"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/mm_yy"
                                android:layout_marginTop="16dp"
                                android:layout_marginHorizontal="16dp"
                                style="@style/OmiseEditText"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                            <co.omise.android.ui.SecurityCodeEditText
                                android:id="@+id/et_card_security_code"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/security"
                                android:layout_marginTop="16dp"
                                android:layout_marginRight="16dp"
                                style="@style/OmiseEditText"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:layout_marginEnd="16dp" />
                        </LinearLayout>

                        <co.omise.android.ui.CardNameEditText
                            android:id="@+id/et_card_holder_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/card_holder_name"
                            android:layout_marginTop="16dp"
                            android:layout_marginHorizontal="16dp"
                            style="@style/OmiseEditText"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                        <Button
                            android:id="@+id/btn_pay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:text="@string/pay"
                            android:onClick="onPayment"
                            style="@style/OmiseButton"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                        <TextView
                            android:id="@+id/tv_input_error"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/error"
                            android:text="@string/invalid_inputs"
                            android:layout_marginBottom="16dp"
                            style="@style/OmiseEditTextLabel"
                            android:visibility="gone"
                            android:layout_gravity="center_horizontal"/>
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>