...
    <TextView
        android:id="@+id/tv_success_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_success"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@id/tv_thanks_message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_thanks_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@id/bt_dismiss"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_success_message"
        android:gravity="center_horizontal" />

...
